# arcos

./: .asm-lsp.toml  .gitignore  Cargo.toml  Makefile  README.md  TODO.txt  \  build-x86_64-iso.make  build.sh  checkelf  compile_commands.json  flake.nix  linker.ld  main.c  memory.x  meson.build  meson.options  os.img  run  x86_64-cross.txt  x86_64-unknown-none.txt
.cache/clangd/index/: addr.h.AE6EBE58AABD9155.idx  asm_helper.h.78ADD0A080002EF2.idx  atomic.h.90C53AE16959F53E.idx  cpu.c.5E77583DC92F4DA4.idx  cpu.h.60892A385EB47184.idx  debug.h.983F2125905A75C9.idx  interrupts.h.EA512FEA80BCEB7C.idx  interrupts.h.F1712ED6B3C66E60.idx  isr.h.3049A8EEAB9F7070.idx  kernel.c.2E189346FFB60FA1.idx  kernel.c.EDC70EF78CCDBD91.idx  kmain.c.54E6645F576C4C99.idx  limits.h.759344C90E7C6A6C.idx  main.c.DDFD8B349703ECA0.idx  memory.c.3087A5253E579782.idx  memory.h.3693EE701A7F6DEC.idx  multiboot.c.B2096CE3A1AB90C7.idx  multiboot.h.E60AE578A3F51734.idx  ports.h.962A1B90B0A3E437.idx  print.c.C24A2873E62B5CC7.idx  print.h.5E61852036BF2B2D.idx  serial.c.CBDF7807555C783A.idx  serial.h.E0D0D62D15CBCA11.idx  spinlock.h.47903E9B680F01FF.idx  stdint.h.B069091553D23646.idx  tty.c.BB1307CA4D588F53.idx  tty.h.9D8DF94DBD6B88CB.idx  types.h.4A4254D3DB708FE5.idx  vga.c.039FBBB78ECB1FC0.idx  vga.c.31EEBA20BEF3233D.idx  vga.h.9ED541E59116415D.idx  vga.h.D2C4904A62A8586F.idx  vga.h.DB04E9F766D52CE0.idx  vmm.c.B9101F4AE3B53666.idx
.cargo/: config.toml
arch/: meson.build
arch/include/arch/: debug.h
arch/x86_64/: build-helper.sh  crti.asm  crtn.asm  linker.ld  meson.build  serial.c
arch/x86_64/boot/: README.md  boot.S  boot64.S  boot_gdt.S  boot_pt.S  boot_pt.asm  entry.asm  header.asm  linker.ld  lm64.asm  mb2_header.S  meson.build  multiboot.c  x86_64-none-elf.json
arch/x86_64/bootseq/: boot.asm  boot.h  boot.s  header.asm  lm.asm  multiboot.h
arch/x86_64/cpu/: cpu.c  debug.c  gdt.c  interrupts.c  meson.build  registers.S
arch/x86_64/drivers/: meson.build  serial.c  vga.c
arch/x86_64/include/: boot.h  cpu.h  gdt.h  interrupts.h  multiboot.h  ports.h
arch/x86_64/include/drivers/: serial.h  vga.h
arch/x86_64/include/x86_64/: boot.h  cpu.h  gdt.h  interrupts.h  memory.h  multiboot2.h
arch/x86_64/interrupts/: idt.c  isr.c  isr_stubs.S
arch/x86_64/iso/boot/grub/: grub.cfg
boot/: boot  boot.asm  build.sh
boot/ldscripts/nrf52840/: linker.ld
boot/long_mode/: clear.asm  print.asm
boot/protected_mode/: clear.asm  detect_lm.asm  elevate.asm  gdt.asm  init_pt.asm  print.asm
boot/real_mode/: elevate.asm  load.asm  print.asm  print_hex.asm
bootloader/: bootloader.S  linker.ld
grub/: grub.cfg
hal/: defs.h
include/: asm_helper.h  atomic.h  config.h  cpu.h  debug.h  gdt.h  kernel.h  limits.h  memory.h  multiboot.h  types.h
include/arcos/: tty.h
include/cpu/: vga.h
include/drivers/: vga.h
include/ds/: rbtree.h
include/kernel/: addr.h  apic.h  cpu.h  interrupts.h  memory.h  mm.h  paging.h  percpu.h  proc.h  smp.h  spinlock.h  tty.h
include/kernel/acpi/: acpi.h  madt.h
kernel/: Makefile  entry.asm  kernel  kernel.c  kernel.elf  kmain.c  linker.ld  meson.build
kernel/arcos/: tty.c
kernel/boot/: boot.asm  multiboot.asm  test.c
kernel/drivers/: vga.c
kernel/inc/: types.h
kernel/inc/cpu/: idt.h  isr.h  ports.h
kernel/inc/driver/: vga.h
kernel/kernel/: meson.build  tty.c
kernel/kernel/ds/: rbtree.c
kernel/kernel/hardware/: apic.c  interrupts.c  isr_defs.asm  meson.build
kernel/mm/: memory.c  meson.build  pmm.c  string.c  vmm.c
kernel/rust/: Cargo.toml
kernel/rust/.cargo/: config.toml
kernel/rust/src/: lib.rs
kernel/src/: kernel.c
kernel/src/cpu/: idt.c  isr.c  isr_def.asm  ports.c
kernel/src/driver/: vga.c
ldscripts/nrf/nrf52/: nrf52832.ld
libc/include/: stdint.h
libc/include/sys/: cdefs.h  types.h
rust/: Cargo.toml  meson.build
rust/.cargo/: config.toml
rust/common/: Cargo.toml
rust/common/src/: lib.rs
rust/file_systems/: Cargo.toml
rust/file_systems/src/: lib.rs
rust/memory/: Cargo.toml
rust/network_stack/: Cargo.toml
rust/proc_management/: Cargo.toml
rust/proc_management/src/: lib.rs
rust/src/: lib.rs
src/: gdt.rs  lib.rs  main.c  main.rs
src/drivers/: mod.rs  serial.rs  vga.rs
src/drivers/cpu/interrupts/: apic.rs  i8259pic.rs  mod.rs
src/gdt/: mod.rs
src/interrupts/: mod.rs
src/keeb/: mod.rs
src/serial/: mod.rs
src/vga/: mod.rs
sysroot/boot/: arcos.elf
sysroot/boot/grub/: grub.cfg
targets/x86_64/iso/boot/grub/: grub.cfg
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
utils/: Dockerfile  build-toolchain.sh
