kernel_sources = ['kernel/kernel.c', 'kernel/kernel/tty.c']

cc = find_program('clang')

# c_gen = generator(cc,
#   output: '@BASENAME@.o',
#   arguments: ['-I../include/', '-I../libc/include/', '-nostdlib', '-ffreestanding', '-Wall', '-Wextra', '@INPUT@', '-o', '@OUTPUT@'])
#
# kernel_gen_objs = c_gen.process(kernel_sources)
