subdir('kernel')
kernel_sources = ['kernel/kernel.c']
kernel_sources = kernel_sources + kernel_kernel_srcs


# c_gen = generator(cc,
#   output: '@BASENAME@.o',
#   arguments: ['-I../include/', '-I../libc/include/', '-nostdlib', '-ffreestanding', '-Wall', '-Wextra', '@INPUT@', '-o', '@OUTPUT@'])
#
# kernel_gen_objs = c_gen.process(kernel_sources)
